# forge-core

./: .gitignore  CHANGELOG.en.md  CHANGELOG.md  LICENSE  README.en.md  README.md  install.sh  pyproject.toml
docs/: adapters-spec.md  article-draft.en.md  article-draft.md  article-short-thread.en.md  article-short-thread.md  canonical-source-spec.md  demo-walkthrough.md  design.en.md  design.md  eval-report.en.md  eval-report.md  evaluation-spec.md  governance-spec.md  launch-strategy.md  migration-from-personal-os.md  opening-drafts.md  personalos-v0428.md
examples/dxyos-validation/: README.md  (+1 more)
forge/: __init__.py  cli.py  layout.py  self_install.py  tui.py  update.py
tests/: conftest.py  test_adapters.py  test_bench.py  test_bug_1_detect_recommends_capture.py  test_bug_2_ingest_new_layout.py  test_bug_3_symlink_paths.py  test_bug_4_skill_cli_alignment.py  test_bug_5_capture_collision.py  test_bug_6_7_inbox.py  test_classify.py  test_cli_new.py  test_compiler.py  test_contrib_adapters.py  test_diff_ui.py  test_doctor.py  test_doctor_proposal.py  test_eval.py  test_eval_anthropic.py  test_gate.py  test_governance.py  test_heading_demotion.py  test_ingest.py  test_install_skill.py  test_mvc_config.py  test_proposal_cli.py  test_proposal_new.py  test_proposal_render.py  test_proposal_render_v05_equivalence.py  test_proposal_schema.py  test_proposal_validate.py  test_provenance.py  test_review.py  test_section.py  test_self_install.py  test_target_sync.py  test_tui.py  test_update.py  test_v02_git_substrate.py  test_v031_dogfood.py  test_v032_yaml_block_scalar.py  (+11 more)
(+59 files in other folders)
